# tfg-lse

./: .gitignore  README.md  clean.py  cnse.py  dict.json  download_videos.py  i3d.py  pyproject.toml  scraper.py  snipets.md  sts.py  trie.py  trie.txt
data-mining/clean/: dictionary.csv  sts_videos.csv
data-mining/raw/json/: alimentos-y-bebidas.json  arte-y-entretenimiento.json  ciencia.json  deportes-y-ocio.json  especifico-del-pais.json  estilo-de-vida.json  generalidades.json  geografia-y-viajes.json  informatica-y-tecnologia-moderna.json  lengua-de-signos-para-bebes.json  lengua-de-signos-para-principiantes.json  lenguaje.json  oraciones.json  pedagogia.json  religion.json  salud-y-medicina.json  tecnologia.json  trabajo-social.json
data-mining/raw/txt/: alimentos-y-bebidas.txt  arte-y-entretenimiento.txt  ciencia.txt  deportes-y-ocio.txt  especifico-del-pais.txt  estilo-de-vida.txt  generalidades.txt  geografia-y-viajes.txt  informatica-y-tecnologia-moderna.txt  lengua-de-signos-para-bebes.txt  lengua-de-signos-para-principiantes.txt  lenguaje.txt  oraciones.txt  pedagogia.txt  religion.txt  salud-y-medicina.txt  tecnologia.txt  trabajo-social.txt
performance/scraper/: Cargo.toml
performance/scraper/src/: lib.rs  trie.rs  webscrap.rs
rust-wordsoup/: Cargo.toml
rust-wordsoup/src/: lib.rs
