[project]
name = "tfg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "fake-useragent>=2.2.0",
    "marimo>=0.16.3",
    "maturin>=1.9.4",
    "numpy>=2.3.3",
    "playwright>=1.55.0",
    "requests>=2.32.5",
    "torch>=2.8.0",
]
